--- a/css/style.css
+++ b/css/style.css
@@ -11,22 +11,93 @@ html, body{
     vertical-align: top;
 }
 
-/* === SIDEBAR MENU === */
+.label-message {
+	background-color: #1ab394;
+}
 
 .box {
     border: 1px red dotted;
 }
 
+/* === SIDEBAR MENU === */
+
 #side-menu {
     background-color: #2f4050 ;
-    padding: 0px:
+    padding: 0px;
 }
 
 #side-menu h1 {
 	color: darkgrey;
     text-align: center;
-    margin: 10px;
+    margin: 10px 0px;
     font-size: 25px;
+}
+
+#side-menu ul {
+	list-style: none;
+	margin: 0px;
+	padding: 0px;
+}
+
+#side-menu a {
+	padding: 12px 20px;
+	text-decoration: none;
+	color: #9fb1c2;
+	font-weight: bold;
+	font-size: 13px;
+	display: block;	
+}
+
+#side-menu .glyphicon {
+	margin-right: 6px;
+}
+
+#side-menu a:hover {
+	background-color: #293846;
+	color: #FFF;
+}
+
+#side-menu .active a {
+	background-color: #293846;
+	color: #FFF;
+}
+
+#side-menu .settings-btn {
+	background-color: #1ab394;
+}
+
+#side-menu .settings-btn a {
+	color: #FFF;
+}
+
+#side-menu .settings-btn a:hover {
+	background-color: #1ab394;
+}
+
+#side-menu .collapseable {
+	border-left: 4px solid #1ab394;
+	background-color: #293846;
+}
+
+#side-menu .collapseable li {
+	padding-left: 20px;
+	padding-top 5px;
+}
+
+#side-menu .collapseable a {
+	color: #9fb1c2;
+	font-size: 12px;
+	padding: 0px 10px;
+	text-decoration: none;
+	display: block;
+}
+
+#side-menu .collapseable a:hover {
+	color: #FFF;
+}
+
+#side-menu .link > ul > li {
+	padding-bottom: 10px;
 }
 
 .display-table{
@@ -79,10 +150,6 @@ html, body{
 	color: #676a6c;
 }
 
-.label-message {
-	background-color: #1ab394;
-}
-
 #nav-header ul a {
 	text-decoration: none;
 }
@@ -117,5 +184,7 @@ html, body{
 	bottom: 0px;
 	background-color: #FFF;
 	padding: 10px;
+	font-size: 12px;
+	color: #676a6c;
 }
 
