--- a/css/style.css
+++ b/css/style.css
@@ -118,6 +118,28 @@ html, body{
     height: 100%;
 }
 
+.navbar-default {
+	background-color: #FFF;
+}
+
+.navbar-default .navbar-toggle {
+	border-color: #1ab394;
+	background-color: #1ab394;
+	
+}
+
+.navbar-default .icon-bar {
+	border: 1px white solid;
+}
+
+.navbar-default .navbar-toggle:hover {
+	background-color: #1ab394;
+}
+
+.navbar-default .navbar-toggle:focus {
+	background-color: #1ab394;
+}
+
 /*=== NAV HEADER ===*/
 
 #nav-header{
@@ -176,6 +198,37 @@ html, body{
 	width: 35px;
 }
 
+
+/*=== NEW ARTICLE ===*/
+
+#content {
+	margin: 20px 0px 50px 0px;
+	background-color: #FFF;
+	border-top: 4px #e7eaec solid;
+}
+
+#content header {
+	border-bottom: 1px #f3f3f4 solid;
+	padding: 10px 0px;
+}
+
+.page_title {
+	font-size: 14px;
+	font-weight: bold;
+	padding 0px 0px 0px 20px;
+	margin: 0px;
+}
+
+.content-inner {
+	padding: 20px;
+}
+
+.form-wrapper {
+	background-color: #eee;
+	padding: 20px;
+	
+}
+
 /*=== FOOTER ===*/
 
 #admin-footer {
@@ -187,4 +240,6 @@ html, body{
 	font-size: 12px;
 	color: #676a6c;
 }
+
+
 
