--- a/css/style.css
+++ b/css/style.css
@@ -229,6 +229,10 @@ html, body{
 	
 }
 
+.chosen-container, .chosen-container-multi {
+	width: 100% !important;
+}
+
 /*=== FOOTER ===*/
 
 #admin-footer {
